Feature:73604274 - Adicionar Swagger em Produtos Atualização das informações de Swagger nos endpoints: -AtualizarProdutoEndpoint -BuscarProdutoEndpoint -CadastrarProdutoEndpoint -ListarCategoriasEndpoint -RemoverProdutoEndpoint
