# src/easyorder/Infrastructure/Input/Endpoint/Produto/BuscarProdutoEndpoint.ts
@@ -12,8 +12,67 @@ export class BuscarProdutoEndpoint {
     }
 
     public async handle(req: express.Request, res: express.Response): Promise<void> {
+        /**
+            #swagger.tags = ['Produtos']
+            #swagger.path = '/produto/buscar/{id}'
+            #swagger.method = 'get'
+            #swagger.summary = 'Buscar Produto por ID'
+            #swagger.description = 'Este endpoint é utilizado para buscar um produto pelo seu ID no sistema.'
+            #swagger.produces = ["application/json"]  
+            #swagger.parameters['body'] = { 
+                in: 'body', 
+                '@schema': { 
+                    "required": ["Id do Produto"], 
+                    "properties": { 
+                        "id": { 
+                            "type": "string", 
+                            "example": "5e73a938-41e7-4b76-a5a0-ae6147266e72"
+                    }
+                }
+            }
+        */
+
         try {
             const id_produto: string = req.params.id;
+
+            /**
+                                    #swagger.responses[200] = {
+                                        'description': 'Produto localizado:',
+                                        '@schema': {
+                                            'properties': {
+                                                resultado_busca: {
+                                                    type: 'boolean',
+                                                    example: true
+                                                },
+                                                mensagem: {
+                                                    type: 'string',
+                                                    example: 'Produto localizado:'
+                                                },
+                                                produto: {
+                                                    type: 'object',
+                                                    properties: {
+                                                        "id": { 
+                                                        "type": "string", 
+                                                        "example": "5e73a938-41e7-4b76-a5a0-ae6147266e72"
+                                                    },
+                                                        "nome": { 
+                                                            "type": "string",
+                                                            "example": "X-Bacon"
+                                                        },
+                                                        "preco": { 
+                                                            "type": "number",
+                                                            "example": "20"
+                                                        },
+                                                        "categoria": {
+                                                            "type": "string",
+                                                            "example": "Lanche"
+                                                    }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                */
 
 
             if (!id_produto) {
@@ -35,6 +94,25 @@ export class BuscarProdutoEndpoint {
                     }
                 });
             } else {
+
+                /**
+            #swagger.responses[404] = {
+                'description': 'Produto não encontrado',
+                '@schema': {
+                    'properties': {
+                    resultado_busca: {
+                    type: 'boolean',
+                    example: false
+                    },
+                        mensagem: {
+                            type: 'string',
+                            example: 'Produto não encontrado'
+                        }
+                                                    }
+                    }
+                }
+            }
+            */
                 res.status(404).json({ mensagem: 'Produto não encontrado', produto: null });
             }
         } catch (error) {
